--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js" defer></script>
+<script>alert("portfolio still under development")</script>
 
 </body>
 </html>
